force-app/main/default/objects/License_Usage__c/License_Usage__c.object-meta.xml
<CustomObject>
    <label>OBS License Usage</label>
    <nameField>
        <displayFormat>License_Usage-{000000}</displayFormat>
        <label>OBS License Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OBS License Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>