force-app/main/default/objects/License_Usage__c/fields/License_Name__c.field-meta.xml
<CustomField><fullName>License_Name__c</fullName><label>OBS License Name</label><length>80</length><type>Text</type></CustomField>