force-app/main/default/objects/License_Usage__c/fields/Remaining_Licenses__c.field-meta.xml
<CustomField><fullName>Remaining_Licenses__c</fullName><formula>Total_Licenses__c - Used_Licenses__c</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Remaining Licenses</label><precision>18</precision><scale>2</scale><type>Number</type></CustomField>