force-app/main/default/objects/License_Usage__c/fields/Total_Licenses__c.field-meta.xml
<CustomField><fullName>Total_Licenses__c</fullName><label>Total Licenses</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>