force-app/main/default/objects/License_Usage__c/fields/Usage_Percentage__c.field-meta.xml
<CustomField><fullName>Usage_Percentage__c</fullName><formula>IF(Total_Licenses__c > 0, Used_Licenses__c / Total_Licenses__c, 0)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Usage Percentage</label><precision>5</precision><scale>2</scale><type>Percent</type></CustomField>