force-app/main/default/objects/License_Usage__c/fields/Used_Licenses__c.field-meta.xml
<CustomField><fullName>Used_Licenses__c</fullName><label>Used Licenses</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>